Fork Chirper into SBT only build (#1)